<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FitMiInitial</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="users_name">User\'s Name</string>
    <string name="first_name">First Name</string>
    <string name="lastst_name">Last Name</string>
    <string name="save">Save</string>
    <string name="backbutton">Back</string>
    <string name="cancel">Cancel</string>
    <string name="birthday">Birthday</string>
    <string name="height">Height</string>
    <string name="activity_level">Activity Level</string>
     <string name="gender">Select Gender</string>
    <string name="daily_calorie_intake">Daily Calorie Intake</string>
    <string name="genderinfo">Gender</string>
    <string name="month">Month</string>
    <string name="day">Day</string>
    <string name="year">Year</string>
    <string name="feet">Feet</string>
    <string name="inches">Inches</string>
    <string name="calculate">Calculate</string>
    <string name="logout">Logout</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="fitmi">fitmi</string>
    <string name="business_card">Business Card</string>
    <string name="calendar">Calendar</string>
    <string name="cloud">Cloud</string>
    <string name="facebook">Facebook</string>
    <string name="key">Key</string>
    <string name="mail">Mail</string>
    <string name="speech_prompt">Say something&#8230;</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="weight">Weight</string>
    
    <string name="profile">Profile</string>
    <string name="tag">Tag</string>
    <string name="voice_search">Voice Search</string>
    <string name="daily_calorie_intake_on">Our estimated daily calorie goal is calculated based on age, height, weight and gender. It is intended to produce the calorie goal required to meet our plan. We use the Harris Benedict Formula. This equation produce what is known as a Basal Metabolic Rate(BMR) which is the number of calories you turn at rest. Calorie goals must be between 1200 and 9000 calories per day.</string>
    <string name="daily_calorie_intake_off">We recommend that you select an \"automatic\" calorie goal unless you have received specific recommendations for calorie intake from a doctor or nutritionist. You may choose to enter your own calorie goal by turning \"automatic\" calorie goals off. If you opt to set your own calorie goals, the daily calorie goal will not ajust your weight changes. You will need to manually reduce the daily calorie goal. If FitMi calculates your calorie goals, the goal will adjust your weight changes.</string>

    <string-array name="spinneritems">
        <item>1323</item>
        <item>2587</item>
        <item>2546</item>
        <item>2486</item>
        <item>3694</item>
    </string-array>

    
    <string name="report_activity">Report Activity</string>
</resources>