<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <include
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        layout="@layout/header" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <com.custom.view.TextView200XLight
                android:id="@+id/SubHeading_UnitSettings"
                android:textSize="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                
                android:text="Calorie Intake"
                android:textColor="@color/black"
                android:textStyle="normal" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@color/light_grey"
                android:orientation="vertical" >
            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp" >

                <com.custom.view.TextView300Light
                    style="@style/HeaderTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="Automatic"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/SwitchText_CalorieIntake"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_gravity="right|center_vertical"
                    android:gravity="center"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="ON"
                    android:textColor="@color/black"
                    android:textSize="18dp"
                    android:textStyle="bold" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@color/light_grey"
                android:orientation="vertical" >
            </LinearLayout>

            <LinearLayout
                android:id="@+id/DailyCalorieIntakeLinear_CalorieIntake"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp" >

                    <com.custom.view.TextView300Light
                        style="@style/HeaderTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="Daily Calorie Intake"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="normal" />

                    <EditText
                        android:id="@+id/editTextCaloryUpdate"
                        android:layout_width="100dp"
                        android:layout_height="35dp"
                        android:layout_gravity="right|center_vertical"
                        android:background="@drawable/light_grey_inputbox_bg"
                        android:inputType="number"
                        android:singleLine="true"
                        android:paddingLeft="5dp" >

                    </EditText>
                </FrameLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/light_grey"
                    android:orientation="vertical" >
                </LinearLayout>
            </LinearLayout>

            <FrameLayout
                android:id="@+id/frameCalorySet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" >

                <TextView
                    style="@style/HeaderTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="Daily Calorie Intake"
                    android:textColor="@color/black"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtCaloryTakeset"
                    style="@style/HeaderTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:text="2015"
                    android:textColor="@color/black"
                    android:textSize="18dp"
                    android:textStyle="bold" />
            </FrameLayout>

            <TextView
                android:id="@+id/CalorieDetails_CalorieIntake"
                style="@style/HeaderTextStyle"
                android:layout_width="fill_parent"
                android:layout_height="250dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:singleLine="false"
                android:text="@string/daily_calorie_intake_on"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:textStyle="normal" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/Save_CalorieIntake"
            style="@style/SignIn_SignUp_ButtonStyle"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/pink_button_bg"
            android:text="@string/save"
            android:textStyle="normal" />

        <Button
            android:id="@+id/Cancel_CalorieIntake"
            style="@style/SignIn_SignUp_ButtonStyle"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/royal_blue_button_bg"
            android:text="@string/cancel"
            android:textStyle="normal" />
    </LinearLayout>

</LinearLayout>